Create checksum when installing and deploying
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@622 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/pom.xml
@@ -53,6 +53,7 @@
                             <version>${project.version}</version>
                             <packaging>properties</packaging>
                             <file>src/org.openwms.infrastructure.configuration.properties</file>
+                            <createChecksum>true</createChecksum>
                         </configuration>
                     </execution>
                 </executions>
