--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.postgres/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.postgres/pom.xml
@@ -34,8 +34,15 @@
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>..</moduleDir>
+        <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+          </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>com.springsource.bundlor</groupId>
@@ -94,7 +101,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
-            <version>${project.version}</version>
+            <version>${openwms.configuration.version}</version>
             <type>properties</type>
             <scope>runtime</scope>
         </dependency>
