Updated configuration files, namespaces and file headers
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@643 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.integration.jpa/pom.xml
@@ -34,6 +34,7 @@
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>..</moduleDir>
+        <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
         <resources>
