Updated configuration files, namespaces and file headers
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@644 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
@@ -17,14 +17,13 @@
 # License along with this software. If not, write to the Free
 # Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-#  
+#
+# JDBC options, used by the DataSource bean
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql:OPENWMS
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
-# Used with PostgreSQL database and Hibernate as JPA Provider
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-# Used with PostgreSQL database and EclipseLink as JPA Provider
 #jdbc.dialect=org.eclipse.persistence.platform.database.PostgreSQLPlatform
-# Used with HSQL database and Hibernate as JPA Provider
 #jdbc.dialect=org.hibernate.dialect.HSQLDialect
+jdbc.persistenceUnit=OpenWMS-test-durable
