--- a/org.openwms/trunk/source/org.openwms.common.framework.test/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.framework.test/pom.xml
@@ -32,6 +32,9 @@
     <artifactId>org.openwms.common.framework.test</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <properties>
+        <moduleDir>..</moduleDir>
+    </properties>
     <build>
         <plugins>
             <plugin>
