--- a/org.openwms/trunk/source/org.openwms.app/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.app/pom.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 /*
- * OpenWMS, the Open Warehouse Management System
- * 
- * Distributable under LGPL license.
- * See terms of license at gnu.org.
- */
+ * openwms.org, the Open Warehouse Management System.
+ *
+ * This file is part of openwms.org.
+ *
+ * openwms.org is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * openwms.org is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software. If not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */  
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -21,6 +35,43 @@
     <properties>
         <moduleDir>..</moduleDir>
     </properties>
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-par-plugin</artifactId>
+                <configuration>
+                    <outputFile>target/${project.artifactId}.par</outputFile>
+                    <applicationVersion>1.0.0</applicationVersion>
+                    <applicationSymbolicName>OpenWMS</applicationSymbolicName>
+                    <applicationDescription>OpenWMS OSGi PAR Bundle</applicationDescription>
+                    <applicationName>${project.artifactId}</applicationName>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/usr</outputDirectory>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <excludeArtifactIds>org.openwms.common.domain,org.openwms.common.integration,org.openwms.common.integration.hibernate,org.openwms.common.integration.jpa,org.openwms.common.service.api,org.openwms.common.service.spring,org.openwms.client.flex.wrapper</excludeArtifactIds>
+                            <excludeGroupIds>javax.transaction,javax.persistence,org.junit,org.slf4j,org.springframework,com.springsource.dmserver,org.apache.log4j</excludeGroupIds>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -29,12 +80,24 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
+            <version>${project.version}</version>
+            <type>properties</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.infrastructure.postgres</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.integration</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.integration.eclipselink</artifactId>
+            <artifactId>org.openwms.common.integration.hibernate</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -58,46 +121,28 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+
+        <!-- Resources -->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>com.springsource.freemarker</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>com.springsource.org.hsqldb</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>org.hibernate.ejb-library</artifactId>
+            <type>libd</type>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-par-plugin</artifactId>
-                <version>1.0.0.RELEASE</version>
-                <configuration>
-                    <outputFile>target/${project.artifactId}.par</outputFile>
-                    <applicationVersion>1.0.0</applicationVersion>
-                    <applicationSymbolicName>OpenWMS</applicationSymbolicName>
-                    <applicationDescription>OpenWMS OSGi PAR Bundle</applicationDescription>
-                    <applicationName>${project.artifactId}</applicationName>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/par-provided</outputDirectory>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <excludeGroupIds>com.springsource.dmserver,org.apache.log4j</excludeGroupIds>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
