Added TransportUnitService to frontend
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@666 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -124,6 +124,11 @@
 	</pluginRepositories>
 
 	<dependencies>
+        <dependency>
+            <groupId>opensymphony</groupId>
+            <artifactId>pell-multipart</artifactId>
+            <version>2.1.5</version>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.client.flex.app</artifactId>
