--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
@@ -24,6 +24,7 @@ jdbc.url=jdbc:postgresql:OPENWMS
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-#jdbc.dialect=org.eclipse.persistence.platform.database.PostgreSQLPlatform
+jdbc.database=POSTGRESQL
+jdbc.properties=hibernate.connection.compatible=7.1
 #jdbc.dialect=org.hibernate.dialect.HSQLDialect
 jdbc.persistenceUnit=OpenWMS-test-durable
