Modified headers and cleaned up preparing for milestone release
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@691 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.app.plan/pom.xml
@@ -132,6 +132,18 @@
         </plugins>
     </build>
     <dependencies>
+        <!-- Spring Framework -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.spring-library</artifactId>
+            <type>libd</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>org.springframework.security.core</artifactId>
+        </dependency>
+    
         <!-- Project Core dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
