--- a/org.openwms/trunk/source/docs/pom.xml
+++ b/org.openwms/trunk/source/docs/pom.xml
@@ -1,32 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 /*
- * OpenWMS, the Open Warehouse Management System
- * 
- * Distributable under LGPL license.
- * See terms of license at gnu.org.
- */
+ * openwms.org, the Open Warehouse Management System.
+ *
+ * This file is part of openwms.org.
+ *
+ * openwms.org is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * openwms.org is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software. If not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */  
 -->
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>org.openwms</artifactId>
-        <groupId>org.openwms</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-    <artifactId>docs</artifactId>
-    <name>${project.artifactId}</name>
-    <packaging>pom</packaging>
-    <properties>
-        <moduleDir>..</moduleDir>
-    </properties>
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>org.openwms</artifactId>
+		<groupId>org.openwms</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>docs</artifactId>
+	<name>${project.artifactId}</name>
+	<packaging>pom</packaging>
+	<properties>
+		<moduleDir>..</moduleDir>
+	</properties>
 
-    <distributionManagement>
-        <site>
-            <id>${distribution.serverId}</id>
-            <name>OpenWMS User Documentation</name>
-            <url>scp://${distribution.serverUrl.docsPath}</url>
-        </site>
-    </distributionManagement>
+	<distributionManagement>
+		<site>
+			<id>${distribution.serverId}</id>
+			<name>OpenWMS User Documentation</name>
+			<url>scp://${distribution.serverUrl.docsPath}</url>
+		</site>
+	</distributionManagement>
 </project>
