--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -19,7 +19,7 @@
  * License along with this software. If not, write to the Free
  * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */
+ */  
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -46,14 +46,26 @@
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
+				<groupId>com.springsource.bundlor</groupId>
+				<artifactId>com.springsource.bundlor.maven</artifactId>
+				<configuration>
+					<outputPath>${basedir}/src/main/webapp</outputPath>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>bundlor</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<finalName>${project.artifactId}</finalName>
 					<archive>
-						<manifestFile>
-							src/main/webapp/META-INF/MANIFEST.MF
-                        </manifestFile>
+						<manifestFile>src/main/webapp/META-INF/MANIFEST.MF</manifestFile>
 					</archive>
 				</configuration>
 			</plugin>
@@ -124,23 +136,44 @@
 	</pluginRepositories>
 
 	<dependencies>
+		<!-- Spring Framework -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>org.springframework.spring-library</artifactId>
+			<type>libd</type>
+			<scope>provided</scope>
+		</dependency>
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>org.springframework.security.core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>org.springframework.security.web</artifactId>
+			<version>${spring.version}</version>
+			<scope>provided</scope>
+		</dependency>
         <dependency>
-            <groupId>opensymphony</groupId>
-            <artifactId>pell-multipart</artifactId>
-            <version>2.1.5</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>org.springframework.security.config</artifactId>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
         </dependency>
+
+		<!-- Project dependencies -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.client.flex.app</artifactId>
 			<version>${project.version}</version>
 			<type>swf</type>
+			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>org.openwms.common.domain.as</artifactId>
-			<version>${project.version}</version>
-			<type>swc</type>
-		</dependency>
+		<!--
+			<dependency> <groupId>${project.groupId}</groupId> <artifactId>org.openwms.common.domain.as</artifactId>
+			<version>${project.version}</version> <type>swc</type> </dependency>
+		-->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.framework.test</artifactId>
@@ -166,22 +199,8 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>com.springsource.freemarker</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.spring-library</artifactId>
-			<type>libd</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>com.springsource.javax.servlet</artifactId>
-			<scope>provided</scope>
-		</dependency>
+
+		<!-- Granite DS libraries -->
 		<dependency>
 			<groupId>org.graniteds</groupId>
 			<artifactId>granite-core</artifactId>
@@ -207,16 +226,34 @@
 			<artifactId>granite-hibernate</artifactId>
 			<version>${granite.version}</version>
 		</dependency>
+
+		<!-- Other libraries -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence-library</artifactId>
 			<type>libd</type>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlcommons</groupId>
 			<artifactId>com.springsource.org.apache.xmlcommons</artifactId>
 			<version>1.3.3</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>com.springsource.freemarker</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>com.springsource.javax.servlet</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>pell-multipart</artifactId>
+			<version>2.1.5</version>
 		</dependency>
 	</dependencies>
 </project>
