--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/src/main/webapp/WEB-INF/web.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,18 @@
 		<filter-name>AMFMessageFilter</filter-name>
 		<url-pattern>/graniteamf/*</url-pattern>
 	</filter-mapping>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetBean</param-name>
+            <param-value>filterChainProxy</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<servlet>
 		<servlet-name>AMFMessageServlet</servlet-name>
 		<servlet-class>org.granite.messaging.webapp.AMFMessageServlet</servlet-class>
