--- a/org.openwms/trunk/source/pom.xml
+++ b/org.openwms/trunk/source/pom.xml
@@ -719,11 +719,6 @@
                 <version>1.1.2.B</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>org.springframework.security.core</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.test</artifactId>
                 <version>${spring.version}</version>
@@ -921,6 +916,12 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.common.flex.module</artifactId>
+                <version>${project.version}</version>
+                <type>swc</type>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.domain</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -943,6 +944,12 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.service.spring</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.tms.flex.module</artifactId>
+                <version>${project.version}</version>
+                <type>swf</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
