--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -175,9 +175,15 @@
 		</dependency>
 		<dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.tms.flex.module</artifactId>
+            <artifactId>org.openwms.common.flex.module</artifactId>
 			<version>${project.version}</version>
 			<type>swf</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.tms.flex.module</artifactId>
+            <version>${project.version}</version>
+            <type>swf</type>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
