--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -29,7 +29,7 @@
 		<artifactId>org.openwms</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.openwms.common.domain.as</artifactId>
+	<artifactId>org.openwms.tms.domain.as</artifactId>
 	<packaging>swc</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
@@ -69,6 +69,12 @@
 					</execution>
 				</executions>
 				<dependencies>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.common.domain.as</artifactId>
+                        <version>${project.version}</version>
+                        <type>swc</type>
+                    </dependency>
 					<dependency>
 						<groupId>com.adobe.flex</groupId>
 						<artifactId>compiler</artifactId>
@@ -109,7 +115,7 @@
 						<template>${project.basedir}/etc/2.0.0.GA/interface.gsp</template>
 					</interfaceTemplate>
 					<includeJavaClasses>
-						<class>org.openwms.common.domain.*</class>
+						<class>org.openwms.tms.domain.*</class>
 					</includeJavaClasses>
 					<sourcePaths>
 						<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
@@ -195,10 +201,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>org.openwms.common.domain</artifactId>
+			<artifactId>org.openwms.common.domain.as</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
+            <type>swc</type>
 		</dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.tms.domain</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.adobe.flex.framework</groupId>
 			<artifactId>flex-framework</artifactId>
