--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -29,7 +29,7 @@
 		<artifactId>org.openwms</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.openwms.tms.domain.as</artifactId>
+	<artifactId>org.openwms.common.domain.as</artifactId>
 	<packaging>swc</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
@@ -70,12 +70,6 @@
 				</executions>
 				<dependencies>
                     <dependency>
-                        <groupId>${project.groupId}</groupId>
-                        <artifactId>org.openwms.common.domain.as</artifactId>
-                        <version>${project.version}</version>
-                        <type>swc</type>
-                    </dependency>
-					<dependency>
 						<groupId>com.adobe.flex</groupId>
 						<artifactId>compiler</artifactId>
 						<version>${flex.version}</version>
@@ -115,7 +109,7 @@
 						<template>${project.basedir}/etc/2.0.0.GA/interface.gsp</template>
 					</interfaceTemplate>
 					<includeJavaClasses>
-						<class>org.openwms.tms.domain.*</class>
+						<class>org.openwms.common.domain.*</class>
 					</includeJavaClasses>
 					<sourcePaths>
 						<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
@@ -199,15 +193,9 @@
 	</pluginRepositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>org.openwms.common.domain.as</artifactId>
-			<version>${project.version}</version>
-            <type>swc</type>
-		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.tms.domain</artifactId>
+            <artifactId>org.openwms.common.domain</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
