--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -193,6 +193,13 @@
 	</pluginRepositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>org.openwms.common.domain</artifactId>
+			<version>${project.version}</version>
+            <type>jar</type>
+            <scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
